# ftor

./: .gitignore  .gitmodules  CMakeLists.txt
src/: bencode.cpp  bencode.h  metainfo.cpp  metainfo.h
test/: test_bencode.cpp  test_metainfo.cpp
